--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -49,7 +49,7 @@ header {
 /* MENU */
 
 #dropdown-menu {
-    width: 135px;
+    width: 150px;
     border: transparent;
     background-color: #4F9153;
     color: #fff;
@@ -150,6 +150,13 @@ footer {
     border-radius: 15px;
     font-weight: 700;
     cursor: pointer;
+}
+
+.btn_quartenario:hover {
+    transition: all 0.5s ease-in-out;
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
 }
 
 /* FORM */
