ajustando select editar-cadastro

--- a/src/styles/editar-cadastro.css
+++ b/src/styles/editar-cadastro.css
@@ -44,6 +44,7 @@ form {
   display: flex;
   align-items: center;
   margin-top: 32px;
+  margin-bottom: 40px;
   padding: 4px;
   gap: 1rem;
 }
@@ -53,7 +54,15 @@ form {
   width: 260px;
 }
 
-/* .warning {
-  background-color: #dd0000;
-  color: #ffffff;
-} */
+#dropdown-menu {
+  width: 170px;
+  border: transparent;
+  background-color: #4F9153;
+  color: #fff;
+  font-family: inherit;
+  font-size: 0.9rem;
+  padding: 12px;
+  border-radius: 15px;
+  cursor: pointer;
+  font-weight: 600;
+}
