--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,7 +4,7 @@ body {
     font-family: "Inter", sans-serif;
     color: #2f2e2e;
     background: #e3e3e3;
-
+    
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -16,6 +16,7 @@ header {
     align-items: center;
     justify-content: space-between;
     padding: 1.2rem 4rem;
+    margin-top: 10px;
 }
 
 /* LOGO */
